Bug #38307
ceph-osd fails to bind to IPv6 interface for public_network
0%
Description
When trying to start ceph-osd configured for IPv6, interface binding fails.
Configure in ceph.conf:
[global]
public_network = fd00:151::/64
cluster_network = fd00:10::/64
Run:
/usr/bin//ceph-osd -f --cluster ceph --id 3 --setuser ceph --setgroup ceph
...and see:
2019-02-11 14:28:36.560 7feaee1abb80 -1 unable to find any IP address in
networks 'fd00:151::/64' interfaces ''
2019-02-11 14:28:36.560 7feaee1abb80 -1 Failed to pick public address.
After patch, see:
2019-02-13 07:29:32.362 7ff020b7db80 10 -- bindv
[v2:[fd00:151::102]:0/0,v1:[fd00:151::102]:0/0]
History
#1 Updated by Jesse Williamson over 4 years ago
- Subject changed from ceph-osd fails to bind to IPv6 interface for public_network [global] public_network = fd00:151::/64 cluster_network = fd00:10::/64 Run: /usr/bin//ceph-osd -f --cluster ceph --id 3 --setuser ceph --setgroup ceph ...and see: 2019-02-11 14:28:36.560 7fea to ceph-osd fails to bind to IPv6 interface for public_network
#2 Updated by Greg Farnum over 4 years ago
- Project changed from Ceph to RADOS
- Category deleted (
OSD)
You going to open a PR for this, Jesse?
#3 Updated by Ricardo Dias over 4 years ago
Jesse, what's the value of the ms_bind_ipv6 and ms_bind_ipv4 in your configuration when you hit this problem?
My theory is that both ms_bind_ipv6 and ms_bind_ipv4 are set to true, but only a valid ipv6 network is set in public_cluster config option, and then pick_addresses is able to get an ipv6 address, but fails to get an ipv4 address and returns -1 in the end.
Not sure if this is a bug because it depends on the semantic of ms_bind_ipv* config options.
#4 Updated by Ricardo Dias about 4 years ago
- Status changed from New to Resolved
- Pull request ID set to 26692
The PR https://github.com/ceph/ceph/pull/26692 enforces pick_addresses to fail when ms_bind_ipv4 and ms_bind_ipv6 options are enabled and public_network or cluster_network settings only contain networks of a single type (either IPv4 or IPv6).