osd: after IPv6 address matches, continue on

Fix for bug "ceph-osd fails to bind to IPv6 interface for public_network"

http://tracker.ceph.com/issues/38307

Instead of trying to keep matching, once we have attached to IPv6,
continue the program.

Signed-off-by: Jesse Williamson <jwilliamson@suse.de>